[package]
name = "tx-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master" }
futures = "0.3.25"
pin-project = "1.0.12"
tokio = { version = "1.22.0", features = ["sync", "macros"] }
tracing = "0.1.37"
